[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "archive_manager"
version = "0.1.0"
description = "Partitioned Parquet / ORC archive manager for cloud storage"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "cloud_client",
    "log_framework",
    "pandas>=2.0.0,<3.0.0",
    "pyarrow">=12.0.0,<20.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0,<9.0",
    "pytest-mock>=3.0,<4.0",
    "moto[s3]>=4.0,<6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "archive_manager"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]