[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud_client"
version = "0.1.0"
description = "Mutli-provider cloud storage client for data engineering workloads"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "boto3>1.26.0,<2.0.0",
    "botocore>=1.29.0,<2.0.0",
]

[project.optional-dependencies]
azure = ["azure-storage-blob>=12.0.0,<13.0.0"]
gcp   = ["google-cloud-storage>=2.0.0,<3.0.0"]
dev   = [
    "pytest>=7.0,<9.0",
    "pytest-mock>=3.0,<4.0",
    "moto[s3]>=4.0,<6.0",
]

# Maps src/ flat layout -> importable as "cloud_client"
# After: pip install -e cloud_client/
# Usage: from cloud_client import CloudClientFactory
[tool.hatch.build.targets.wheel] 
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "cloud_client"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]