[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log_framework"
version = "0.1.0"
description = "Structured, cloud-aware logging framework for data engineering pipelines"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "cloud_client",
]

[tool.hatch.build.targets.editable]
# Sibling package - resolved via pip install -e ../cloud_client before this 

[project.optional-dependencies]
dev = [
    "pytest>=7.9.0",
    "pytest-mock>=3.0,<4.0",
    "freezegun>=1.0,<2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = "log_framework"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
